--- a/TasksApp/rn-minimal-task-app-clean-main/package.json
+++ b/TasksApp/rn-minimal-task-app-clean-main/package.json
@@ -10,16 +10,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "expo": "~51.0.28",
+    "expo-font": "^13.3.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "@react-native-async-storage/async-storage": "^1.23.1",
     "react-native-safe-area-context": "4.10.5"
   },
   "devDependencies": {
-    "typescript": "~5.3.3",
     "@types/react": "~18.2.79",
-    "@types/react-native": "~0.72.8"
+    "@types/react-native": "~0.72.8",
+    "typescript": "~5.3.3"
   }
 }
