--- a/app.json
+++ b/app.json
@@ -4,10 +4,8 @@
     "slug": "rn-minimal-task-app-clean",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#000000"
     },
@@ -19,14 +17,12 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#000000"
       },
       "package": "com.anonymous.rnminimaltaskappclean"
     },
     "web": {
-      "bundler": "metro",
-      "favicon": "./assets/icon.png"
+      "bundler": "metro"
     }
   }
 }
